--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
 <link rel="stylesheet" href="styles.css" type="text/css">
 <link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 <title>Colin Roch - Contact</title>
 </head>
 <body>
