--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
 <body>
 <main>
   <div id="logo"><img src="images/rdesignscom.png" width="450" height="150" alt="colin roch logo"></div>
+  <div id="logotwo"><img src="images/rdesignscom2.png" width="450" height="150" alt="colin roch logo"></div>
   <header></header>
 <nav>
   <ul>
@@ -30,6 +31,7 @@ Since childhood, I have always loved the arts. I must admit growing up, I had al
 <p>Ut finibus dictum libero, ut facilisis urna bibendum a. Maecenas in mauris ac magna euismod porttitor sit amet ac dui. Ut volutpat ornare neque, ac interdum lacus hendrerit ut. Maecenas tellus magna, accumsan sit amet tortor non, efficitur vehicula ante. Nulla auctor turpis at nunc lacinia, ac rutrum leo malesuada. Quisque iaculis leo ac mattis sollicitudin. Nam volutpat vel ante non viverra. Praesent non nulla pulvinar, auctor lectus sed, pellentesque nulla. Praesent suscipit justo non ante ultrices lacinia. Nullam sollicitudin congue justo, imperdiet finibus dui tincidunt a. Nam at dignissim nunc, quis commodo felis. Mauris viverra justo accumsan nulla convallis placerat. Integer a fringilla neque. Praesent in erat ut tellus accumsan bibendum vel condimentum augue.</p>
 <p>Nulla facilisi. Integer euismod ante a malesuada euismod. Sed cursus elit vel libero pulvinar, vitae luctus ex mollis. Integer sed erat finibus, tempus sem eleifend, ultrices diam. In dapibus nisi ornare leo mollis auctor. Pellentesque dictum, nulla vitae pellentesque dictum, ipsum mauris bibendum dolor, ut varius purus nunc vitae lacus. Suspendisse dignissim ante et nisl egestas sagittis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nullam nibh nisl, feugiat at quam et, ornare gravida purus. Proin purus neque, venenatis et volutpat sed, congue a sapien. Pellentesque pharetra tellus augue, vel scelerisque eros facilisis aliquam. Mauris velit erat, posuere sed ex sit amet, ultricies bibendum lacus. Aenean pulvinar rutrum dolor, eu ultricies quam congue sed.</p>
 <p>Vestibulum ultrices dolor ex, at sagittis mauris scelerisque at. Donec enim odio, molestie ornare ante non, auctor cursus urna. Quisque varius, libero ut lacinia iaculis, nunc risus cursus mi, in volutpat sem ante ut purus. Quisque sollicitudin, arcu pellentesque gravida tincidunt, ante risus viverra magna, eu aliquet sem metus ut risus. Maecenas sit amet dictum nisi, at aliquam leo. Aliquam felis odio, interdum eu hendrerit aliquam, mattis et lorem. Donec dignissim efficitur arcu, sit amet consectetur lacus molestie eget. Maecenas id ullamcorper risus. Donec commodo lorem vel semper convallis. Sed sed maximus nibh, a suscipit purus. Aliquam porta massa id quam ultrices, quis mattis lacus suscipit. Pellentesque placerat aliquam risus, sed condimentum mi scelerisque eu. Nunc laoreet lorem mi, vel scelerisque justo pretium sed. Suspendisse eu mi ligula.</p>
+<p id="printcontact">Colin Roch | 204-599-6833 | colinljroch@gmail.com</p>
 </div>
 </div>
 <div class="dropdown">
@@ -66,6 +68,7 @@ if (openDropdown.classList.contains('show')) {
    <li id="insta"><a href="https://www.instagram.com/rochcolin/?hl=en" target="frootloops"></a></li>
    <li id="twit"><a href="https://twitter.com/RochColin" target="frootloops"></a></li>
  </aside>
+ <div id="qr"><img src="images/qrcode.jpg" width="300" height="300" alt="qr code"></div>
  <footer>© Colin Roch Communication Multimédia 2017</footer>
 </main>
 </body>
